# apple1

./: CMakeLists.txt  README.md
include/: cpu.h  io.h
include/instructions/: arith.h  bra.h  ctrl.h  flags.h  inc.h  instructions.h  load.h  logic.h  nop.h  shift.h  stack.h  trans.h
src/: cpu.c  io.c  main.c
src/instructions/: arith.c  bra.c  ctrl.c  flags.c  inc.c  instructions.c  load.c  logic.c  nop.c  shift.c  stack.c  trans.c
