cmake_minimum_required(VERSION 3.28)
project(apple1)
file(GLOB_RECURSE SOURCE_FILES src/*.c src/instructions/*.c)
add_compile_options(-fsanitize=undefined,address -Wall -Werror -pedantic)
add_link_options(-fsanitize=undefined,address)
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR} include/)
add_executable(${PROJECT_NAME} ${SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} ${CURSES_LIBRARIES})
set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 23)
 